# LauGurpil

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile.sh
gfx/: cars.h  cars.s  ground_tiles.h  ground_tiles.pyxel  ground_tiles.s  ground_tiles.tsx  lap_numbers.aseprite  lap_numbers.h  lap_numbers.s  rules.tmx  titlescreen.aseprite  titlescreen.h  titlescreen.s  track1.s  track1.tmx  track2.s  track2.tmx  track3.s  track3.tmx  track4.s  track4.tmx  track_tiles.h  track_tiles.pyxel  track_tiles.s  track_tiles.tsx  tracks.h
include/: camera.h  checkpoint.h  constants.h  race.h  race_single.h  race_stats.h  race_tournament.h  racecar.h  racecar_ai.h  racecar_select.h  state.h  text.h  timer.h  title.h  tournament.h  track.h  track_select.h  types.h
music/: chiptunes.xm
source/: camera.c  checkpoint.c  main.c  race.c  race_single.c  race_stats.c  race_tournament.c  racecar.c  racecar_ai.c  racecar_select.c  state.c  text.c  timer.c  title.c  tournament.c  track.c  track_select.c
tools/: .gitignore
tools/checkpoints/: CMakeLists.txt  checkpoint_extractor.c
tools/progress/: .gitignore  CMakeLists.txt  progress_extractor.c
track_data/: track1_ai_checkpoints.c  track1_ai_checkpoints.h  track1_progress.c  track1_progress.h  track2_ai_checkpoints.c  track2_ai_checkpoints.h  track2_progress.c  track2_progress.h  track3_ai_checkpoints.c  track3_ai_checkpoints.h  track3_progress.c  track3_progress.h  track4_ai_checkpoints.c  track4_ai_checkpoints.h  track4_progress.c  track4_progress.h  track_ai_checkpoints.h  track_markers.h
